--- a/thesis/tex/BCI.tex
+++ b/thesis/tex/BCI.tex
@@ -1,9 +1,9 @@
 
 \chapter{Brain-Computer Interface}
-\section{SSVEP}
-\section{c-VEP}
-\chapter{Target Identification Methods}
-\section{Power spectral density analysis}
+\section{Visual stimulus}
+\section{Steady-state visual evoked potentials}
+\subsection{Target Identification Methods}
+\subsubsection{Power spectral density analysis}
 Power Spectral density (PSD) analysis is widely used in SSVEP BCIs\cite{bin2009cca}.
-\section{Canonical correlation analysis}
-Canonical correlation analysis was first introduced by Harold Hotelling in 19xx . Testing citing\cite{scipy}\cite{scikit-learn}\cite{psychopy}
+\subsubsection{Canonical correlation analysis}
+Canonical correlation analysis was first introduced by Harold Hotelling in 19xx .
