--- a/thesis/tex/introduction.tex
+++ b/thesis/tex/introduction.tex
@@ -1,2 +1,3 @@
 
 \chapter*{Introduction}
+It isn't about convenience -- for severely disabled people, development of a brain-computer interface (BCI) could be the most important technological breakthrough in decades (http://computer.howstuffworks.com/brain-computer-interface.htm)
