--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -7,7 +7,6 @@
 	year={2009},
 	publisher={IOP Publishing}
 }
-pages={1--1},
 
 @article{scikit-learn,
 	title={Scikit-learn: Machine Learning in {P}ython},
@@ -45,7 +44,42 @@ pages={1--1},
 }
 
 
+EEG chapter
+
+@article{neuroncount,
+author={Azevedo, F. A.C. and Carvalho, L. R.B. and Grinberg, L. T. and Farfel, J. M. and Ferretti, R. E.L. and Leite, R. E.P. and Filho, W. J. and Lent, R. and Herculano-Houzel, S.},
+year={2009},
+title={Equal numbers of neuronal and nonneuronal cells make the human brain an isometrically scaled-up primate brain},
+journal={The Journal of Comparative Neurology},
+volume={513},
+pages={532--541},
+number={5},
+doi={10.1002/cne.21974}
+}
+
+@book{neuronpic,
+    title     = {Alzheimer’s Disease: Unraveling the Mystery},
+    publisher = {U. S. Department of Health and Human Services, National Institutes of Health},
+    note      = {(NIH Publication No. 02-3782)},
+    year      = {2002},
+    url		  = {http://www.bu.edu/alzresearch/files/pdf/ADEARUnravelingtheMystery12-033.pdf}
+}
+
+@book{neuralpathway,
+  title={Eye, Brain, and Vision},
+  author={Hubel, D.H.},
+  isbn={9780716760092},
+  lccn={lc87023506},
+  series={Scientific American Library Series},
+  url={http://hubel.med.harvard.edu/book/bcontex.htm},
+  year={1995},
+  publisher={Henry Holt and Company}
+}
 
 
-
-
+@misc{brain,
+  title = {How Your Brain Works},
+  author = {Freudenrich, PhD ,Craig and Robynne Boyd},
+  howpublished = {\url{http://science.howstuffworks.com/life/inside-the-mind/human-brain/brain.htm}},
+  note = {[Online; accessed 19-July-2008]}
+}
