Add the description of brain imaging technologies. Disable layout stuff.

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -47,14 +47,14 @@
 EEG chapter
 
 @article{neuroncount,
-author={Azevedo, F. A.C. and Carvalho, L. R.B. and Grinberg, L. T. and Farfel, J. M. and Ferretti, R. E.L. and Leite, R. E.P. and Filho, W. J. and Lent, R. and Herculano-Houzel, S.},
-year={2009},
-title={Equal numbers of neuronal and nonneuronal cells make the human brain an isometrically scaled-up primate brain},
-journal={The Journal of Comparative Neurology},
-volume={513},
-pages={532--541},
-number={5},
-doi={10.1002/cne.21974}
+	author={Azevedo, F. A.C. and Carvalho, L. R.B. and Grinberg, L. T. and Farfel, J. M. and Ferretti, R. E.L. and Leite, R. E.P. and Filho, W. J. and Lent, R. and Herculano-Houzel, S.},
+	year={2009},
+	title={Equal numbers of neuronal and nonneuronal cells make the human brain an isometrically scaled-up primate brain},
+	journal={The Journal of Comparative Neurology},
+	volume={513},
+	pages={532--541},
+	number={5},
+	doi={10.1002/cne.21974}
 }
 
 @book{neuronpic,
@@ -66,20 +66,32 @@ doi={10.1002/cne.21974}
 }
 
 @book{neuralpathway,
-  title={Eye, Brain, and Vision},
-  author={Hubel, D.H.},
-  isbn={9780716760092},
-  lccn={lc87023506},
-  series={Scientific American Library Series},
-  url={http://hubel.med.harvard.edu/book/bcontex.htm},
-  year={1995},
-  publisher={Henry Holt and Company}
+	title={Eye, Brain, and Vision},
+	author={Hubel, D.H.},
+	isbn={9780716760092},
+	lccn={lc87023506},
+	series={Scientific American Library Series},
+	url={http://hubel.med.harvard.edu/book/bcontex.htm},
+	year={1995},
+	publisher={Henry Holt and Company}
 }
 
+@article{NIRS,
+	title = {A review on continuous wave functional near-infrared spectroscopy and imaging instrumentation and methodology },
+	journal = {NeuroImage},
+	volume = {85},
+	number = {0},
+	pages = {6--27},
+	year = {2014},
+	issn = {1053-8119},
+	doi = {http://dx.doi.org/10.1016/j.neuroimage.2013.05.004},
+	url = {http://www.sciencedirect.com/science/article/pii/S1053811913004941},
+	author = {Felix Scholkmann and Stefan Kleiser and Andreas Jaakko Metz and Raphael Zimmermann and Juan Mata Pavia and Ursula Wolf and Martin Wolf},
+}
 
 @misc{brain,
-  title = {How Your Brain Works},
-  author = {Freudenrich, PhD ,Craig and Robynne Boyd},
-  howpublished = {\url{http://science.howstuffworks.com/life/inside-the-mind/human-brain/brain.htm}},
-  note = {[Online; accessed 19-July-2008]}
+	title = {How Your Brain Works},
+	author = {Freudenrich, PhD ,Craig and Robynne Boyd},
+	howpublished = {\url{http://science.howstuffworks.com/life/inside-the-mind/human-brain/brain.htm}},
+	note = {[Online; accessed 19-July-2008]}
 }
