--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -3,17 +3,17 @@
 
 % Packages for layout testing
 
-\usepackage{showframe}
-\usepackage{layouts}
-\usepackage{layout}
-\printinunitsof{pt}
+%\usepackage{showframe}
+%\usepackage{layouts}
+%\usepackage{layout}
+%\printinunitsof{pt}
 
 \includeonly{./tex/abstract, ./tex/title_page, ./tex/appendices, ./tex/introduction, ./tex/EEG, ./tex/BCI, ./tex/conclusion}
 \begin{document}
 
-\layout
-\pagevalues
-\newpage
+%\layout
+%\pagevalues
+%\newpage
 
 \include{./tex/title_page}
 \include{./tex/abstract}
