--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -1,6 +1,7 @@
 
 \chapter{Electroencephalography}
 \section{Electrical activity in the brain}
+\label{sec:neuron}
 
 As all known living organisms are composed of cells, so are humans and the human brain. The brain consists of nerve cells, or neurons, and non-neural cells, called glial cells. There are approximately 86 billion neurons in the human brain and roughly as much non-neural cells \cite{neuroncount}. A typical neuron has a cell body, multiple nerve endings, or dendrites, and one nerve fibre, or axon. Both, dendrites and axons can branch multiple times, but axons can be much longer than dendrites. 
 
@@ -10,7 +11,7 @@ There are connections between neurons, through which neurons can interact with e
 \centering
 \includegraphics[width=0.5\textwidth]{synapse.jpg}
 \caption{Neurons and chemical synapse\cite[p.~17]{neuronpic}}
-\label{synapse}
+\label{fig:synapse}
 \end{figure}
 
 To send signals, neuron must be able to maintain electrical potential, called membrane potential. Membrane potential is defined as the difference in electric potential between the interior and exterior of a cell. When neurons are not sending signals, they have slightly negative membrane potential which is called resting potential. Negative resting potential is achieved by having more positively charged ions inside the cell than around it. The positively charged ions are sodium and potassium cations.
@@ -21,10 +22,19 @@ By having stable resting potential, neuron is able to send signals by rapidly in
 
 Voltage-gated ion channels, as the name suggests, are activated by a certain threshold voltage, called threshold potential. When the membrane potential is near resting potential the channels are shut. Synaptic inputs, however, can cause the membrane potential to increase and if the membrane potential exceeds the threshold, first voltage-gated ion channels are opened and sodium ions start entering the cell. Sodium ions further increase the membrane potential which causes next ion channels to be opened along the axon and more sodium ions can enter the cell and so on.
 
-As sodium ions enter the cell, potassium ion channels start to open and potassium ions start diffusing out of the cell. The depolarisation occurs, because more sodium ions enter the cell than potassium ions diffuse out of the cell. After depolarisation, sodium ion channels are closed while potassium ion channels remain open. This causes the repolarisation of the cell, meaning that the membrane potential of the cell returns to a negative value, which is slightly lower than the resting potential. After potassium ion channels close, sodium-potassium pump reestablishes the resting potential of the cell.
+As sodium ions enter the cell, potassium ion channels start to open and potassium ions start diffusing out of the cell. The depolarisation occurs, because more sodium ions enter the cell than potassium ions diffuse out of the cell. After depolarisation, sodium ion channels are closed while potassium ion channels remain open. This causes the repolarisation of the cell, meaning that the membrane potential of the cell returns to a negative value, which is slightly lower than the resting potential. After potassium ion channels close, active transport reestablishes the resting potential of the cell.
 
-When the action potential reaches the synapse, increased membrane potential causes the voltage-gated calcium channels to open. This increases calcium concentration in the interior of the cell which causes calcium-sensitive proteins to change shape and as a result, neurotransmitters are dumped into the synaptic cleft. figure \ref{synapse}. Some of the neurotransmitter gets bound on the receptors of the signal receiving cell. The last step is the action of the receptor, which might be opening ion channels which in turn cause changes in the membrane potential and might lead to another action potential in the receiving cell.
+When the action potential reaches the synapse, increased membrane potential causes the voltage-gated calcium channels to open. This increases calcium concentration in the interior of the cell which causes calcium-sensitive proteins to change shape and as a result, neurotransmitters are dumped into the synaptic cleft. figure \ref{fig:synapse}. Some of the neurotransmitter gets bound on the receptors of the signal receiving cell. The last step is the action of the receptor, which might be opening ion channels which in turn cause changes in the membrane potential and might lead to another action potential in the receiving cell.
  
-\section{Measuring electrical activity in the brain}
+\section{Measuring the electrical activity in the brain}
+
+As discussed in section \ref{sec:neuron}, neurons in the brain are constantly sending electrochemical signals to communicate with each other. There are several brain imaging techniques available to measure and record this activity. Some of the non-invasive methods are:
+\begin{itemize}
+	\item Functional magnetic resonance imaging (fMRI), which works by detecting changes of oxygen consumption and blood flow that occur in response to neural activity. Magnetic resonance imaging (MRI) technology works by sending a strong magnetic field through the head and detects radiation from certain molecules. Different tissues have different concentration of these molecules and this contrast can be visualised. MRI scanner prices start from around \$150,000.\footnote{http://info.blockimaging.com/bid/92623/MRI-Machine-Cost-and-Price-Guide}
+	\item Positron emission tomography (PET), which works by measuring the emission of positrons from the brain, after injecting radioactive isotopes to the bloodstream. Very similar method to PET is single-photon emission computed tomography (SPECT), which uses isotopes with longer half-lives. PET scanner prices start from around \$125 000.\footnote{http://info.blockimaging.com/bid/68875/How-Much-Does-a-PET-CT-Scanner-Cost}
+	\item Electroencephalography (EEG), which works by measuring electrical potential along scalp. EEG is cheap and portable, but measures only the activity in the outer layer of the brain. Similar method to EEG is magnetoencephalography (MEG), which measures the magnetic fields produced by electrical activity rather than the electrical activity itself. The prices of very simple EEG devices start around \$100, but complex device can cost as much as \$77 100\footnote{http://www.brainvision.com/files/actiCHamp-PyCorder-Flyer\_US.pdf}.
+	\item Functional near-infrared spectroscopy (fNIRS), which measures blood oxygenation in the brain by shining light through the head. As light travels through the head, its intensity decreases. The amount of intensity loss depends on blood oxygenation. fNIRS prices vary around \$10 000 -- \$100 000 \cite{NIRS}.
+\end{itemize}
+
 \section{Visual evoked potentials}
  
