--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -26,15 +26,32 @@ As sodium ions enter the cell, potassium ion channels start to open and potassiu
 
 When the action potential reaches the synapse, increased membrane potential causes the voltage-gated calcium channels to open. This increases calcium concentration in the interior of the cell which causes calcium-sensitive proteins to change shape and as a result, neurotransmitters are dumped into the synaptic cleft. figure \ref{fig:synapse}. Some of the neurotransmitter gets bound on the receptors of the signal receiving cell. The last step is the action of the receptor, which might be opening ion channels which in turn cause changes in the membrane potential and might lead to another action potential in the receiving cell.
  
-\section{Measuring the electrical activity in the brain}
+\section{Measuring the brain's electrical activity}
 
-As discussed in section \ref{sec:neuron}, neurons in the brain are constantly sending electrochemical signals to communicate with each other. There are several brain imaging techniques available to measure and record this activity. Some of the non-invasive methods are:
+As discussed in section \ref{sec:neuron}, neurons in the brain are constantly sending electrochemical signals to communicate with each other. There are several techniques available to measure and record this activity. Some of the non-invasive methods are:
 \begin{itemize}
 	\item Functional magnetic resonance imaging (fMRI), which works by detecting changes of oxygen consumption and blood flow that occur in response to neural activity. Magnetic resonance imaging (MRI) technology works by sending a strong magnetic field through the head and detects radiation from certain molecules. Different tissues have different concentration of these molecules and this contrast can be visualised. MRI scanner prices start from around \$150,000.\footnote{http://info.blockimaging.com/bid/92623/MRI-Machine-Cost-and-Price-Guide}
 	\item Positron emission tomography (PET), which works by measuring the emission of positrons from the brain, after injecting radioactive isotopes to the bloodstream. Very similar method to PET is single-photon emission computed tomography (SPECT), which uses isotopes with longer half-lives. PET scanner prices start from around \$125 000.\footnote{http://info.blockimaging.com/bid/68875/How-Much-Does-a-PET-CT-Scanner-Cost}
-	\item Electroencephalography (EEG), which works by measuring electrical potential along scalp. EEG is cheap and portable, but measures only the activity in the outer layer of the brain. Similar method to EEG is magnetoencephalography (MEG), which measures the magnetic fields produced by electrical activity rather than the electrical activity itself. The prices of very simple EEG devices start around \$100, but complex device can cost as much as \$77 100\footnote{http://www.brainvision.com/files/actiCHamp-PyCorder-Flyer\_US.pdf}.
+	\item Electroencephalography (EEG), which works by measuring electrical potential along the scalp. EEG is cheap and portable, but measures only the activity in the outer layer of the brain. Similar method is magnetoencephalography (MEG), which measures the magnetic fields produced by electrical activity rather than the electrical activity itself. The prices of very simple EEG devices start around \$100\footnote{http://en.wikipedia.org/wiki/Comparison\_of\_consumer\_brain-computer\_interfaces}, but complex device can cost as much as \$77 100\footnote{http://www.brainvision.com/files/actiCHamp-PyCorder-Flyer\_US.pdf}.
 	\item Functional near-infrared spectroscopy (fNIRS), which measures blood oxygenation in the brain by shining light through the head. As light travels through the head, its intensity decreases. The amount of intensity loss depends on blood oxygenation. fNIRS prices vary around \$10 000 -- \$100 000 \cite{NIRS}.
+%http://psychcentral.com/lib/types-of-brain-imaging-techniques/0001057
+%http://www.macalester.edu/academics/psychology/whathap/UBNRP/Imaging/eeg.html
+%http://scienceforthemasses.org/2014/04/11/selecting-an-eeg-device/
 \end{itemize}
+\begin{table}[h]
+	\centering
+	\begin{tabular}{|c|c|c|c|c|c|}
+		\hline
+				& Price	from	& Portable	& Temporal resolution & Requirements\\\hline
+		fMRI	& 150 000	& No	  	& around 1 second	  & magnetically shielded room\\\hline
+		PET		& 125 000	& No		& up to minutes		  & radioactive isotopes injection\\\hline
+		fNIRS	& 10 000 	& Yes		& hundreds of milliseconds & 			\\\hline
+		MEG		&			& No		& milliseconds		  & magnetically shielded room\\\hline
+		EEG		& 100 		& Yes		& milliseconds 		  & 				\\\hline
+	\end{tabular}
+	\caption{Measuring methods comparison}
+	\label{tab:measuring methods}
+\end{table}
 
 \section{Visual evoked potentials}
  
