Update measurement methods comparison chapter. Uptade table of contents. Minor changes in neuron chapter.

--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}		% we also have estonian words like lühikokkuvõte
 \usepackage[toc,page]{appendix} % nice appendix
 \usepackage{url} 				% to add url in bib
+\usepackage{tablefootnote}		% add footnotes to tables
 \usepackage{graphicx}			% for pictures
 \graphicspath{ {./img/} }
 
