--- a/thesis/tex/BCI.tex
+++ b/thesis/tex/BCI.tex
@@ -1,9 +1,16 @@
 
-\chapter{Brain-Computer Interface}
+\chapter{VEP based Brain-Computer Interface}
+\section{Mathematical background}
+\subsection{Fast Fourier transform}
+asd
+\subsection{Linear interpolation}
+asd
+\subsection{Canonical correlation analysis}
+asd
 \section{Visual stimulus}
-\section{Steady-state visual evoked potentials}
-\subsection{Target Identification Methods}
-\subsubsection{Power spectral density analysis}
+asd
+\section{Steady-state VEP BCI}
+\subsection{Power spectral density analysis}
 Power Spectral density (PSD) analysis is widely used in SSVEP BCIs\cite{bin2009cca}.
-\subsubsection{Canonical correlation analysis}
+\subsection{Canonical correlation analysis}
 Canonical correlation analysis was first introduced by Harold Hotelling in 19xx .
