--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -45,6 +45,7 @@
 
 
 EEG chapter
+Neuron section
 
 @article{neuroncount,
 	author={Azevedo, F. A.C. and Carvalho, L. R.B. and Grinberg, L. T. and Farfel, J. M. and Ferretti, R. E.L. and Leite, R. E.P. and Filho, W. J. and Lent, R. and Herculano-Houzel, S.},
@@ -76,8 +77,10 @@ EEG chapter
 	publisher={Henry Holt and Company}
 }
 
+Brain imaging techniques comparison
+
 @article{NIRS,
-	title = {A review on continuous wave functional near-infrared spectroscopy and imaging instrumentation and methodology },
+	title = {A review on continuous wave functional near-infrared spectroscopy and imaging instrumentation and methodology},
 	journal = {NeuroImage},
 	volume = {85},
 	number = {0},
@@ -88,6 +91,19 @@ EEG chapter
 	url = {http://www.sciencedirect.com/science/article/pii/S1053811913004941},
 	author = {Felix Scholkmann and Stefan Kleiser and Andreas Jaakko Metz and Raphael Zimmermann and Juan Mata Pavia and Ursula Wolf and Martin Wolf},
 }
+
+@article{timeresol
+	title = {Spatiotemporal mapping of brain activity by integration of multiple imaging modalities},
+	author = {Anders M. Dale and Eric Halgren},
+	journal = {Current Opinion in Neurobiology},
+	year = {2001},
+	volume = {11},
+	pages = {202–-208},
+	number = {2},
+	url = {http://www.nmr.mgh.harvard.edu/meg/pdfs/halgren/Dale_CurOpNBrev01.pdf}
+}
+
+Example
 
 @misc{brain,
 	title = {How Your Brain Works},
