--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -8,7 +8,7 @@
 %\usepackage{layout}
 %\printinunitsof{pt}
 
-\includeonly{./tex/abstract, ./tex/title_page, ./tex/appendices, ./tex/introduction, ./tex/EEG, ./tex/BCI, ./tex/conclusion}
+\includeonly{./tex/abstract, ./tex/title_page, ./tex/appendices, ./tex/introduction, ./tex/EEG, ./tex/BCI, ./tex/conclusion, ./tex/SSVEP_BCI}
 \begin{document}
 
 %\layout
@@ -22,6 +22,7 @@
 \include{./tex/introduction}
 \include{./tex/EEG}
 \include{./tex/BCI}
+\include{./tex/SSVEP_BCI}
 \addcontentsline{toc}{chapter}{Conclusion}
 \include{./tex/conclusion}
 
