--- a/thesis/tex/appendices.tex
+++ b/thesis/tex/appendices.tex
@@ -4,7 +4,7 @@
 \begin{appendices}
 \renewcommand{\thechapter}{\Roman{chapter}}
 \chapter{Glossary}
-asd
+\printglossary
 \chapter{Licence}
 \textbf{Non-exclusive licence to reproduce thesis and make thesis public}\\[1cm]
 
