--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -92,7 +92,7 @@ Brain imaging techniques comparison
 	author = {Felix Scholkmann and Stefan Kleiser and Andreas Jaakko Metz and Raphael Zimmermann and Juan Mata Pavia and Ursula Wolf and Martin Wolf},
 }
 
-@article{timeresol
+@article{timeresol,
 	title = {Spatiotemporal mapping of brain activity by integration of multiple imaging modalities},
 	author = {Anders M. Dale and Eric Halgren},
 	journal = {Current Opinion in Neurobiology},
