--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,6 +1,14 @@
 \documentclass[a4paper,12pt]{report}
 \usepackage{myStyle}
 
+% Acronyms
+
+\newacronym{EEG}{EEG}{Electroencephalography}
+\newacronym{BCI}{BCI}{Brain-computer interface}
+\newacronym{VEP}{VEP}{Visual evoked potential}
+\newacronym{FFT}{FFT}{Fast Fourier transform}
+\newacronym{CCA}{CCA}{Canonical correlation analysis}
+
 % Packages for layout testing
 
 %\usepackage{showframe}
